apps/base/infra-ntfy/deploy/ntfy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ntfy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
      app.kubernetes.io/component: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
        app.kubernetes.io/component: ntfy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534 # nobody
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: ntfy
        image: "registry.lan/ntfy:v2.28.0-amd64"
        imagePullPolicy: IfNotPresent
        args: ["serve"]
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /v1/health
            port: http
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: ntfy-data
          mountPath: /var/cache/ntfy
          subPath: cache
        - name: ntfy-data
          mountPath: /var/lib/ntfy
          subPath: data
        - name: ntfy-config
          mountPath: /etc/ntfy/server.yml
          subPath: server.yml
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: ntfy-data
        persistentVolumeClaim:
          claimName: ntfy-data
      - name: ntfy-config
        configMap:
          name: ntfy-config
      - name: ntfy-init-volume
        secret:
          secretName: ntfy-init
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
