apps/base/infra-ntfy/deploy/ntfy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-ntfy
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: ntfy
      app.kubernetes.io/component: ntfy

  ingress:
    - ports:
        - port: http
      from:
        # Allow from the ingress controller
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx

        # Allow from ntfy-alertmanager
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ntfy
              app.kubernetes.io/component: ntfy-alertmanager

        # Allow from homeassistant
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: home-homeassistant
          podSelector:
            matchLabels:
              app.kubernetes.io/name: homeassistant
              app.kubernetes.io/component: homeassistant
